maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: not found: value repererCasesAjdacentes
          	marquerCasesAdjacentes(repererCasesAjdacentes(i,j),i,j)
                                       ^JediEscaper:101: error: too many arguments for method getIndication: (x: Int, y: Int)Int
  var indications:Array[Int]=(getIndication(getX()-1,getY()),getIndication(getX(),getY()-1,getIndication(getX()+1,getY()),getIndication(getX(),getY()+1)))
                                                                          ^JediEscaper:116: error: not found: value indication
  if (minimum==indication(1))                                                                 {
               ^